--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Nov 03 11:01:48 EDT 2022
-sdk.dir=/Users/dannygoldman/Library/Android/sdk
+sdk.dir=C\:/Users/roboj/AppData/Local/Android/Sdk
