--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Nov 08 20:01:41 EST 2022
-sdk.dir=C\:\\Users\\roboj\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/dannygoldman/Library/Android/sdk
