--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DungeonCrawler"
         tools:targetApi="31">
         <activity
-            android:name=".ControllerActivity"
+            android:name="com.example.dungeoncrawler.ControllerActivity"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
