--- a/local.properties
+++ b/local.properties
@@ -5,6 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Nov 11 11:00:41 EST 2022
-sdk.dir=/Users/dannygoldman/Library/Android/sdk
+sdk.dir=C\:/Users/roboj/AppData/Local/Android/Sdk
 # sdk.dir=/Users/dannygoldman/Library/Android/sdk
 # C\:/Users/roboj/AppData/Local/Android/Sdk
