--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 01 10:57:00 EST 2022
-sdk.dir=C\:/Users/roboj/AppData/Local/Android/Sdk
+sdk.dir=/Users/dannygoldman/Library/Android/sdk
