--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name="com.example.dungeoncrawler.ControllerActivity"
-            android:exported="true">
-<!--           android:screenOrientation="landscape"-->
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
